# roguelike

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompilerSettings.cmake  Dependencies.cmake  ProjectOptions.cmake  Sanitizers.cmake  Testing.cmake  Warnings.cmake
scripts/: clean.sh  run.sh  test.sh
src/: CMakeLists.txt  defines.h  main.cpp
src/core/: assert.h  logger.cpp  logger.h  math.cpp  math.h
src/game/: entity.cpp  entity.h
src/graphics/: graphics.cpp  graphics.h  mesh.cpp  mesh.h  opengl.h
src/platform/: input.h  platform.cpp  platform.h  platform_linux.cpp
tests/: CMakeLists.txt
tests/unit/: pass.cpp
